# mnn-rs

./: .gitignore  .gitmodules  .ignore  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  flake.nix  justfile  sgconfig.yml
.github/workflows/: build.yaml  docs.yaml
.rules/: no-println.yaml  no-unwrap.yml
benches/: mnn-bench.rs
examples/: img.rs  inspect.rs  llm.rs  mobilenet.rs  simple.rs  wasm-bench.rs
mnn-async/: Cargo.toml
mnn-async/src/: lib.rs
mnn-bridge/: Cargo.toml
mnn-bridge/src/: lib.rs  ndarray.rs  opencv_bridge.rs
mnn-glue/: Cargo.toml  build.rs
mnn-glue/src/: shared.rs
mnn-js/: Cargo.toml
mnn-js/src/: lib.rs
mnn-sync/: Cargo.toml
mnn-sync/src/: lib.rs
mnn-sys/: Cargo.toml  README.md  build.rs  cmd.txt
mnn-sys/glue/: TensorGlue.cpp  TensorGlue.hpp
mnn-sys/mnn_c/: Backend_c.cpp  Backend_c.h  Interpreter_c.cpp  Interpreter_c.h  Schedule_c.cpp  Schedule_c.h  TensorUtils_c.cpp.bak  TensorUtils_c.h  Tensor_c.cpp  Tensor_c.h  backend_c.cpp  backend_c.h  error_code_c.h  interpreter_c.cpp  interpreter_c.h  llm_c.cpp  llm_c.h  mnndefine.h  pipeline_c.h  schedule_c.cpp  schedule_c.h  session_c.cpp  session_c.h  tensor_c.cpp  tensor_c.h  utils.c  utils.cpp  utils.h
mnn-sys/patches/: halide_type_t_64.patch  mnn-tracing.patch  no_llm_demo.patch  typedef_template.patch
mnn-sys/src/: ffi.rs  lib.rs  out.rs  shared.rs  tracing.rs
runner/: Cargo.toml  result
runner/src/: benchmark.rs  main.rs
runner/web/: index.html  result
src/: backend.rs  benchmark.rs  error.rs  expr.rs  interpreter.rs  lib.rs  llm.rs  pipeline.rs  profile.rs  schedule.rs  session.rs  sync.rs  tensor.rs  utils.rs
src/tensor/: list.rs  raw.rs
tests/: async_test.rs  async_tokio_test.rs  backend.rs  basic.rs  common.rs  minimal_coverage_tests.rs  multi_threaded.rs  resizing.rs  segfault.rs
tests/assets/: .gitattributes  realesr.mnn  resizing.mnn
tools/: flake.nix  tflite_to_mnn.py
tools/bencher/: Cargo.toml
tools/bencher/src/: cli.rs  main.rs
tools/cachix/: Makefile  push.sh
tools/sg-lints/lints/: no-println.yaml  no-unwrap.yml
tools/sg-lints/utils/: is-test.yml
