[workspace]
members = [".", "mnn-bridge", "mnn-sync", "mnn-sys"]
[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/aftershootco/mnn-rs"

[package]
name = "mnn"
version = "0.3.0"
edition = "2021"
license = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/mnn"
description = "High level MNN to Rust bindings"

[workspace.dependencies]
mnn = { version = "0.3.0", path = "." }
error-stack = { version = "0.5" }

[dependencies]
libc = "0.2"
mnn-sys = { version = "0.2", path = "mnn-sys", features = [] }
thiserror = "2"
error-stack.workspace = true
oneshot = "0.1"
tracing = { version = "0.1.40", optional = true }
dunce = "1.0.5"

[features]
opencl = ["mnn-sys/opencl"]

metal = ["mnn-sys/metal"]
coreml = ["mnn-sys/coreml"]

crt_static = ["mnn-sys/crt_static"]
# Disable mnn-threadpool to enable this
mnn-threadpool = ["mnn-sys/mnn-threadpool"]
tracing = ["dep:tracing"]
profile = ["tracing"]

default = ["mnn-threadpool"]


[dev-dependencies]
anyhow = "1.0"
bytemuck = "1.17"
clap = { version = "4.5", features = ["derive"] }
divan = "0.1.14"
# mnn-sync = { path = "mnn-sync" }

[[bench]]
name = "mnn-bench"
harness = false

[profile.rwd]
debug = true
inherits = "release"
