[workspace]
members = [".", "mnn-bridge", "mnn-sync", "mnn-sys", "tools/bencher"]
[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/aftershootco/mnn-rs"

[package]
name = "mnn"
version = "0.3.0"
edition = "2021"
license = { workspace = true }
repository = { workspace = true }
documentation = "https://docs.rs/mnn"
description = "High level MNN to Rust bindings"

[workspace.dependencies]
mnn = { version = "0.3.0", path = "." }
error-stack = { version = "0.5" }

[dependencies]
mnn-sys = { version = "0.2", path = "mnn-sys", default-features = false, features = [
  "mnn-threadpool",
  "sparse-compute",
] }
thiserror = "2"
error-stack.workspace = true
tracing = { version = "0.1.40", optional = true }
dunce = "1.0.5"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
opencl = ["mnn-sys/opencl"]

metal = ["mnn-sys/metal"]
coreml = ["mnn-sys/coreml"]
cuda = ["mnn-sys/cuda"]

vulkan = [] # This is currently unimplemented

crt_static = ["mnn-sys/crt_static"]

tracing = ["dep:tracing"]
profile = ["tracing"]
serde = ["dep:serde"]

simd = ["mnn-sys/simd"]

default = ["simd"]


[dev-dependencies]
anyhow = "1.0"
bytemuck = "1.17"
clap = { version = "4.5", features = ["derive"] }
divan = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

[[bench]]
name = "mnn-bench"
harness = false

[profile.rwd]
debug = true
inherits = "release"
