[package]
name = "mnn-bridge"
version = "0.1.0"
edition = "2021"
license = { workspace = true }

[dependencies]
mnn = { workspace = true, default-features = false }
ndarray = { version = "0.16", optional = true }
# opencv = { version = "0.92.3", default-features = false, optional = true }

[features]
ndarray = ["dep:ndarray"]
# opencv = ["dep:opencv"]

default = []
