[package]
name = "mnn-sys"
version = "0.1.0"
edition = "2021"
links = "mnn"
license = { workspace = true }

[build-dependencies]
anyhow = "1.0.86"
bindgen = { version = "0.72", features = ["experimental"] }
build-target = "0.8.0"
cc = { version = "1.1.5", features = [] }
cmake = { version = "0.1" }
diffy = "0.4.0"
dunce = "1.0.4"
fs_extra = "1.3.0"
itertools = "0.14.0"
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
tap = "1.0.1"
zip = "8.1.0"

[features]
vulkan = []
metal = []
coreml = ["metal"]
opencl = []
openmp = []
opengl = []
mnn-threadpool = []
default = ["mnn-threadpool"]
crt_static = []
download = []

[dependencies]
libc = "0.2.155"
once_cell = "1.20.2"
tracing-core = "0.1.33"
