[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
# bytemuck = "1.16.1"
# fast_image_resize = "4.2.1"
js-sys = "0.3.69"
mnn = { version = "0.1.0", path = ".." }
owo-colors = "4.0.0"
# serde_json = "1.0.121"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.70", features = ["console"] }
# clap = { version = "*" }


[[bin]]
name = "runner"
path = "src/main.rs"

# [[bin]]
# name = "benchmark"
# path = "src/benchmark.rs"
