[package]
name = "runner"
version = "0.1.0"
edition = "2021"
default-run = "runner"

[dependencies]
anyhow = "1.0.86"
bytemuck = "1.16.1"
clap = { version = "4.5.11", features = ["derive"] }
fast_image_resize = "4.2.1"
mnn = { version = "0.1.0", path = "..", features = ["clap", "metal", "opencl"] }
owo-colors = "4.0.0"
serde_json = "1.0.121"

[[bin]]
name = "runner"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
