[package]
name = "bencher"
version = "0.1.0"
edition = "2021"
license.workspace = true

[target."aarch64-apple-darwin".dependencies]
mnn = { workspace = true, features = ["opencl", "serde", "metal"] }

[target."x86_64-apple-darwin".dependencies]
mnn = { workspace = true, features = ["opencl", "serde"] }

[target."cfg(windows)".dependencies]
mnn = { workspace = true, features = ["opencl", "serde"] }

[dependencies]
bytemuck = { version = "1.20.0", features = ["extern_crate_alloc"] }
clap = { version = "4.5.22", features = ["derive", "unstable-v5"] }
clap-verbosity-flag = { version = "3.0.1", features = [
  "tracing",
], default-features = false }
clap_complete = "4.5.38"
console = "0.15.8"
dunce = "1.0.5"
error-stack = { workspace = true, features = ["serde"] }
indicatif = "0.17.9"
ndarray = "0.16.1"
num = "0.4.3"
same-file = "1.0.6"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tempfile = "3.14.0"
thiserror = "2.0.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
